--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "homepage": "https://Dhanushri-S/github.io/Food-Del",
+  "homepage": "https://Dhanushri-S.github.io/foodDel",
   "name": "front-end",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d bist",
-    "dev": "vite", 
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
+    "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
